@startuml FavoriteManagementClassDiagram
!theme plain
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 80
skinparam classBackgroundColor #f5f5f5
skinparam classBorderColor #666666
skinparam arrowColor #333

class FavoriteController { }

class FavoriteService { }

class FavoriteRepository { }

class Favorite { }

FavoriteController -- FavoriteService
FavoriteService -- FavoriteRepository
FavoriteRepository -- Favorite

@enduml
